# Optymalizacje

Lab1/: CMakeLists.txt  mm1  mm2  mm2.c  mm3  mm3.c  mm4  mm4.c  mm5_4  mm5_4.c  mm5_8  mm5_8.c  mm6  mm6.c  mm7  mm7.c  mm8  mm8.c  mm9.c  times.txt
Lab2/: CMakeLists.txt  chol1  chol2  chol2.c  chol3  chol3.c  chol4  chol4.c  chol5  chol5.c  chol6  chol6.c  times.txt
Lab3/: CMakeLists.txt  a.out  gmon.out  str10.c++  str11.c++  str2.c++  str3.c++  str4.c++  str5.c++  str6.c++  str7.c++  str8.c++  str9.c++
Lab4/: CMakeLists.txt  a.out  ge1.c  ge2.c  ge3.c  ge4.c  ge5.c  ge6.c  ge7.c
Lab5/: chol1.c  chol2.c  chol3.c  chol4.c  chol5.c  chol6.c  chol7.c  chol_papi.c
Zad2/: CMakeLists.txt  d1.c  zad3.c
